tests/fixtures/fail/raw_pointer_constructor_mode.sali
let main(): i32 = {
  let mut value = 42
  let pointer = MutPtr(borrow value)
  0
}
